MMA-8464 rettet mapping for notat i  Korrespondanseparts og saksansvarlig mapping